# anime-rec

./: .gitignore  docker-compose.prod.yml  docker-compose.yml  kafjdsa
.github/workflows/: backend-ci.yml  ci.yml
backend/: Dockerfile  Makefile  pyproject.toml
backend/app/: auth.py  cache.py  crud.py  db.py  main.py  migrate_genres.py  models.py  recs.py  schemas.py  seed_jikan.py  seed_wikipedia.py
backend/app/routers/: anime.py  auth.py  manga.py  recommendations.py  reviews.py  users.py
backend/app/scraper/: crawler.py  run.py  scraper.py  test.py
frontend/: Dockerfile  Makefile  anime-detail.html  anime.html  index.html  login.html  manga-detail.html  manga.html  nginx.conf  package.json  signup.html
frontend/components/: navbar.html
frontend/js/: api.js  auth.js  index.js  login.js  manga-detail.js  manga.js  navbar.js  signup.js
frontend/pages/: index.html  login.html  manga-detail.html  manga.html  signup.html
nginx/: nginx.conf
